--- a/style.css
+++ b/style.css
@@ -37,12 +37,6 @@ footer img{
     border-radius: 20%;
 }
 
-form input{
-    padding: 15px;
-    margin:10px;
-    margin-left: 80px;
-}
-
 h1{
     padding:var(--espacop);
     margin-top: 10px;
@@ -56,10 +50,17 @@ h3{
     color: var(--color-tit);
     padding: var(--espacom);
     margin-top: var(--espacog);
+    font-size: 23px;
 }
 
 header{
     border-top: 5px solid white;
+}
+
+input::placeholder{
+    color: black;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 li{
@@ -70,11 +71,6 @@ li{
 main{
     padding-bottom: 30px;
     border-bottom: 5px solid white;
-}
-
-main p{
-    margin-left: 40px;
-    margin-right: 40px;
 }
 
 main section{
@@ -106,6 +102,7 @@ section img{
 
 section p{
     text-indent: 15px;
+    margin-right: 120px;
 }
 
 ul{
@@ -123,6 +120,12 @@ ul{
     font-weight: bold;
 }
 
+.divcontato{
+    display: flex;
+    align-items: center;
+    padding-left: 70px;
+}
+
 .eu{
     display: flex;
     align-items: center;
@@ -138,18 +141,54 @@ ul{
     margin-right: 70px;
 }
 
-
-.formi{
-    padding-left: 165px;
-    padding-right: 150px;
-    background-color: var(--color-tit);
+.sectionmain {
+    padding: 25px 2px;
+    border-radius: 10px;
+    margin-left: 300px;
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
 }
 
+.sectionmain form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em; /*12px*/
+    box-sizing: border-box;
+}
 
-input::placeholder{
+.inputs {
+    padding: 15px 40px;
+    border-radius: 5px;
+    background-color:;
+    border: 2px solid black;
     color: black;
+    font-size: 15px;
+    box-sizing: border-box;
+}
+
+.inputs:focus {
+    border: 4px solid rgb(123, 210, 242);
+    transition: 0.3s;
+}
+.inputs::placeholder{
+    color: black;
+    font-family: 15px;
     font-weight: bold;
-    font-size: 16px;
+}
+
+button[type="button"]{
+    font-size: 15px;
+    color: white;
+    padding: 15px;
+    border-radius: 10px;
+    border: 3px solid rgb(123, 210, 242);
+    background-color:rgb(39, 143, 223);
+}
+
+button[type="button"]:hover{
+    background-color: rgb(49, 27, 101);
+    transition: 0.5s;
 }
 
 .introducao{
@@ -158,11 +197,24 @@ input::placeholder{
     font-size: 17px;
 }
 
-.mensagemform{
-    padding-left: 165px;
-    padding-right: 150px;
-    padding-bottom: 50px;
-    background-color: var(--color-tit);
+.maindiv{
+    display: flex;
+    align-items: center;
+    margin: var(--espacog);
+    margin-left: 70px;
+    margin: 25px;
+    font-size: 18px;
+}
+
+.mainimg{
+    width: 150px;
+    height: 150px;
+    border: 5px solid var(--color-outra);
+    margin-right: var(--espacop);
+}
+
+.mainp{
+    font-size: 18px;
 }
 
 .nomerodape{
@@ -175,11 +227,7 @@ input::placeholder{
     padding-left: 50px;
 }
 
-.divcontato{
-    display: flex;
-    align-items: center;
-    padding-left: 70px;
-}
+
 
 .titpessoal{
     text-align: center;
